[package]
name = "test-redis-connections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
chrono = { version = "0.4.31" }
dotenv = { version = "0.15.0" }
redis = { version = "0.23.3", features = ["tokio-comp"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }